recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:2: error: not found: value step
  if(step<=0){
     ^Tree:11: error: not found: value lenght
    avance(lenght)
           ^