recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if(step<=0){
    return
  }
  else{
    current(steps)
    droite(angle)
    avance(length)
    tree(steps-1, length*shrink, angle, shrink)
    droite(180)
    avance(lenght)
    gauche(angle*2)
    avance(length)
    tree(steps-1, length*shrink, angle, shrink)
    
  }
}